# moby_mcp

./: .gitignore  Dockerfile  Makefile  README.md  auth_middleware.py  dev.sh  docker-compose.yml  pyproject.toml  requirements.txt  server.py  start.sh  test_server.sh
