[project]
name = "moby-mcp-server"
version = "1.0.0"
description = "Moby MCP Server - Docker-style filesystem server with FastMCP"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

